refactor loanServiceImpl and add controller and service for login